add: input file

--- a/python/map.html
+++ b/python/map.html
@@ -123,8 +123,8 @@
           new THREE.BufferGeometry().setFromPoints([new THREE.Vector3(0, -length, 0), new THREE.Vector3(0, length, 0)]),
           new THREE.LineBasicMaterial({ color: 0x00ff00, linewidth: 2 })
         );
-        scene.add(xAxis);
-        scene.add(yAxis);
+        // scene.add(xAxis);
+        // scene.add(yAxis);
       }
       createXYAxes();
 
